[package]
name = "rust-blob"
version = "0.0.1"
authors = ["Theo Belaire <theo.belaire@gmail.com>"]

[[bin]]
name = "draw"
path = "src/main.rs"
doc = true
doctest = true

[dependencies]
toml = "0.1"
docopt = "*"
rustc-serialize = "*"  # if you're using `derive(RustcDecodable)`
nalgebra = "*"
tau = "1.0.2"

[dependencies.cairo]
git = "file:///users/tbelaire/github/rust-cairo"
