[package]
name = "rust-blob"
version = "0.0.1"
authors = ["Theo Belaire <theo.belaire@gmail.com>"]

[[bin]]
name = "draw"
path = "src/main.rs"
test = false  # Only things to test are in the library
doc = false
doctest = false

[lib]
name = "rust_blob"
path = "src/lib.rs"
doc = true
doctest = false # Doctests aren't great atm


[dependencies]
log = "*"
env_logger = "*"
toml = "0.1"
docopt = "*"
rustc-serialize = "*"  # if you're using `derive(RustcDecodable)`
nalgebra = "*"
tau = "1.0.2"

[dependencies.cairo]
git = "file:///users/tbelaire/github/rust-cairo"
